missing param type

--- a/src/components/TableOfContentsHeading.astro
+++ b/src/components/TableOfContentsHeading.astro
@@ -1,5 +1,6 @@
 ---
 // TableOfContentsHeading.astro
+import type { MarkdownHeading } from "astro";
 const { heading } = Astro.props;
 ---
 
@@ -10,7 +11,7 @@ const { heading } = Astro.props;
   {
   heading.subheadings.length > 0 && (
     <ul class="ml-2">
-      {heading.subheadings.map((subheading) => (
+      {heading.subheadings.map((subheading: MarkdownHeading[]) => (
         <Astro.self heading={subheading} />
       ))}
     </ul>
