--- a/src/components/project/ProjectPreview.astro
+++ b/src/components/project/ProjectPreview.astro
@@ -26,7 +26,7 @@ const pinned: boolean = !!frontmatter.order;
 	}
 	</span>
 	<p class="date pr-2 mt-1">
-		<FormattedDate date={pubDate} pubDate/>
+		<FormattedDate date={pubDate}/>
 	</p>
 	{withDesc && ( <p class="italic">{frontmatter.description}</p> )}
 </li>
