--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -15,7 +15,7 @@ export const getStaticPaths = (async ({ paginate }) => {
 }) satisfies GetStaticPaths;
 
 interface Props {
-	page: Page<CollectionEntry<"post">>;
+	page: Page<CollectionEntry<"blog">>;
 	tags: string[];
 }
 
