fix type imports

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,5 +1,5 @@
 ---
-import { CollectionEntry } from 'astro:content';
+import { type CollectionEntry } from 'astro:content';
 import Layout from '../layouts/Sidebar.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 import SocialMediaLinks from '@/components/SocialMediaLinks';
