--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,5 +1,5 @@
 ---
-import { type CollectionEntry } from 'astro:content';
+import type { CollectionEntry } from 'astro:content';
 import Layout from '../layouts/Sidebar.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 import SocialMediaLinks from '@/components/SocialMediaLinks';
@@ -9,19 +9,18 @@ import { siteConfig } from '../consts';
 
 interface Props {
 	post: CollectionEntry<"blog">;
-	minutesRead: number
 }
 
-const post = Astro.props
+const {post} = Astro.props
 
 const { 
+	slug, 
 	data: {
 		title, 
 		description, 
 		pubDate, 
 		updatedDate, 
 		heroImage, 
-		slug, 
 		ogImage,
 		tags,
 		draft
@@ -69,7 +68,7 @@ const articleDate = updatedDate?.toISOString() ?? pubDate.toISOString();
 				
 				<ul class="not-prose flex gap-2 flex-wrap">
 					<Icon class="w-5 h-5" name="carbon:tag-group" aria-hidden="true" focusable="false"/>
-					{tags.map(tag => (
+					{tags.map((tag: string) => (
 						<li class="tag">
 							<a href={`/tags/${tag}`}>{tag}</a>
 						</li>
@@ -84,7 +83,7 @@ const articleDate = updatedDate?.toISOString() ?? pubDate.toISOString();
 	</article>
 	<aside slot="sidebar" class="hidden sm:block">
 		<div class="flex flex-col space-y-2">
-			<h2 class="font-semibold text-lg text-textColor" rel="author">{siteConfig.profile.author}</h2>
+			<h2 class="font-semibold text-lg text-textColor">{siteConfig.profile.author}</h2>
 			{siteConfig.profile.description && (<p>{siteConfig.profile.description}</p>)}
 			<SocialMediaLinks/>
 			<span class="!my-4 text-accent" aria-hidden>---</span>
