refactor for SSR

--- a/src/components/project/ProjectPreview.astro
+++ b/src/components/project/ProjectPreview.astro
@@ -18,7 +18,7 @@ const pinned: boolean = !!data.order;
 
 <li>
 	<span>
-		<a href={`${project.url}/`} class="project-item">
+		<a href={`projects/${project.slug}/`} class="project-item">
 			<h4 class="cody-link inline font-bold" >{data.title}</h4>
 		</a>
 		{
