center hero image

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -42,7 +42,7 @@ const articleDate = updatedDate?.toISOString() ?? pubDate.toISOString();
 	<article class="cody-bg">
 		{
 			heroImage && 
-			<div class="aspect-h-9 aspect-w-16 mb-6 w-full">
+			<div class="aspect-h-9 aspect-w-16 mb-6 w-full flex justify-center">
 					<img src={heroImage.src} alt={heroImage.alt} class="mb-4"/>
 			</div>
 		}
