add title to social media icons

--- a/src/components/SocialMediaLinks.astro
+++ b/src/components/SocialMediaLinks.astro
@@ -14,6 +14,7 @@ import { socialLinks } from "../consts.ts";
 						href={link}
 						target="_blank"
 						rel={`noopener noreferrer`}
+						title={friendlyName}
 					>
 						<Icon class="h-5 w-5" name={icon} aria-hidden="true" focusable="false" />
 						<span class="sr-only">{friendlyName}</span>
