change header font size

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -73,7 +73,7 @@ const url = new URL(Astro.request.url);
 
 <style>
 	.title {
-		@apply bg-accent p-1 text-bgColor text-xl;
+		@apply bg-accent p-1 text-bgColor text-sm;
 	}
 
 	.title:before{
