adjust position based on screen resolution

--- a/src/components/BackToTopBtn.astro
+++ b/src/components/BackToTopBtn.astro
@@ -8,8 +8,8 @@ import { Icon } from 'astro-icon';
 <style>
 button {
 	@apply w-12 h-12 sm:w-10 sm:h-10 transition-all rounded-full bg-accent 
-		text-bgColor fixed bottom-4 sm:bottom-8 left-[82%] sm:left-[82%] shadow
-		hover:shadow-xl hover:scale-125 flex justify-center items-center;
+	text-bgColor fixed bottom-4 sm:bottom-8 left-[82%] sm:left-[80%] 2xl:left-[75%] 
+	shadow hover:shadow-xl hover:scale-125 flex justify-center items-center;
 }
 </style>
 
