add BackToTopBtn on blog posts

--- a/src/components/BackToTopBtn.astro
+++ b/src/components/BackToTopBtn.astro
@@ -1,7 +1,9 @@
 ---
 import { Icon } from 'astro-icon';
+
+let isVisible = false;
 ---
-<button id="back-to-top-btn">
+<button id="back-to-top-btn" aria-label="back to top">
 	<Icon class="w-7 h-7 sm:w-5 s:h-6" name="carbon:arrow-up" aria-hidden="true" focusable="false"/>
 </button>
 
@@ -9,7 +11,7 @@ import { Icon } from 'astro-icon';
 button {
 	@apply w-12 h-12 sm:w-10 sm:h-10 transition-all rounded-full bg-accent 
 	text-bgColor fixed bottom-4 sm:bottom-8 left-[82%] md:left-[90%] 2xl:left-[75%] 
-	shadow hover:shadow-xl hover:scale-125 flex justify-center items-center;
+	shadow hover:shadow-xl hover:scale-125 hidden justify-center items-center;
 }
 </style>
 
@@ -21,4 +23,15 @@ button {
 			document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
 		})
 	}
+
+	window.addEventListener("scroll", (event) => {
+		if(window.pageYOffset < document.documentElement.clientHeight) {
+			backToTopBtn.classList.remove("fade-in");
+			backToTopBtn.classList.add("fade-out");
+			backToTopBtn.style.display = "flex";
+		} else {
+			backToTopBtn.classList.remove("fade-out");
+			backToTopBtn.classList.add("fade-in");
+		}
+	})
 </script>
