--- a/src/pages/series/index.astro
+++ b/src/pages/series/index.astro
@@ -32,7 +32,7 @@ const series = getUniqueWithCountByProperty("series", posts);
 	<ul>
 		{series.map(([s, count]) => (
 			<li class="my-2">
-				<a class="cody-link" href={`/tags/${s}`}>#{s}</a>
+				<a class="cody-link" href={`/series/${s}`}>#{s}</a>
 				({count})
 			</li>
 		))}
