remove unused DM Mono from Google Fonts

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -27,7 +27,7 @@ const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 <!-- Font preloads -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Mono&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
