--- a/src/pages/series/[series]/[...page].astro
+++ b/src/pages/series/[series]/[...page].astro
@@ -11,7 +11,7 @@ import Pagination from '@/components/Pagination';
 
 export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
 	const allPosts = await getAllPosts();
-	const allPostsByDate = sortMDByDate(allPosts);
+	const allPostsByDate = sortMDByDate(allPosts, "ascending");
 	const  uniqueSeries = getUniqueByProperty("series", allPostsByDate);
 
 	return uniqueSeries.flatMap((series) => {
