add series route to navbar links #18

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,13 +30,20 @@ const url = new URL(Astro.request.url);
 					data-astro-prefetch
 				>{nav.title}</HeaderLink>
 			))}
-				<HeaderLink 
-					class="sm:hidden block py-2 sm:py-0" 
-					href="/tags"
-					title="tags"
-					aria-current={url.pathname === "tags" ? "page" : false}
-					data-astro-prefetch
-				>Tags</HeaderLink>
+			<HeaderLink 
+				class="sm:hidden block py-2 sm:py-0" 
+				href="/tags"
+				title="tags"
+				aria-current={url.pathname === "tags" ? "page" : false}
+				data-astro-prefetch
+			>Tags</HeaderLink>
+			<HeaderLink 
+				class="sm:hidden block py-2 sm:py-0" 
+				href="/series"
+				title="series"
+				aria-current={url.pathname === "series" ? "page" : false}
+				data-astro-prefetch
+			>Series</HeaderLink>
 		</div>
 	</nav>
 
