fix: typo in description

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -23,7 +23,7 @@ const { page, tags } = Astro.props;
 
 const meta = {
 	title: "Posts",
-	description: "Ready my collection of posts and the things that interest me",
+	description: "Read my collection of posts and the things that interest me",
 };
 
 const paginationProps = {
