--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -5,10 +5,11 @@ import { getFormattedDate } from "@/utils";
 type Props = HTMLAttributes<"time"> & {
 	date: Date;
 	dateTimeOptions?: Intl.DateTimeFormatOptions;
+	locale?: string;
 };
 
-const { date, dateTimeOptions, ...attrs } = Astro.props;
-const postDate = getFormattedDate(date, dateTimeOptions);
+const { date, dateTimeOptions, locale, ...attrs } = Astro.props;
+const postDate = getFormattedDate(date, dateTimeOptions, locale);
 ---
 
 <time datetime={date.toISOString()} {...attrs} title={postDate}>
