--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,19 +7,19 @@ const year = new Date().getFullYear();
 <footer
 	class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pb-4 pt-20 text-center align-top font-semibold sm:flex-row sm:justify-between sm:text-xs text-textColor mb-8"
 >
-	<div class="me-0 sm:me-4">
+	<div class="mr-2 sm:mr-0">
 		Copyright &copy; {year}{" "}
 		{siteConfig.profile.author}
 	</div>
 	<nav
 		aria-label="More on this site"
-		class="flex gap-x-2 sm:gap-x-0 sm:divide-x sm:divide-accent"
+		class="gap-x-0 sm:gap-x-2 sm:flex sm:divide-x sm:divide-accent"
 	>
 		{
 			NAV_LINKS.map((link) => (
 				<a
 					href={link.path}
-					class="px-4 py-2 sm:px-2 sm:py-0 sm:hover:text-textColor sm:hover:underline"
+					class="px-2 py-0 hover:text-textColor hover:underline sm:px-4 sm:py-2"
 				>
 					{link.title}
 				</a>
